--- a/villataika.fi/en/groups.html
+++ b/villataika.fi/en/groups.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <link href="../stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" /> 
-  <link href="../stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" /> 
-  <script src="../javascripts/prototype.js" type="text/javascript"></script> 
-  <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
-  <script src="../javascripts/prototype.js" type="text/javascript"></script> 
-  <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
-  <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
+  <link href="../stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" />
+
+  <script src="../javascripts/prototype.js" type="text/javascript"></script>
+  <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script>
+  <script src="../javascripts/lightbox.js" type="text/javascript"></script>
+
+  <link href="../stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" />
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Groups" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Groups" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed & Breakfast Villa Taika : Groups</title>
+  <title>Bed &amp; Breakfast Villa Taika : Groups</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="../fi/groups.html" >  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="groups.html" class='selected'>  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -90,14 +86,13 @@
 
   <div id="rcol">
     <div id="rcontent">
-
       <div class="left">
   <img src ="../images/sali.gif" width=450px height=336px/>
 </div>
 <div class="left2">
-  <img src ="../images/allas.jpg">
-  <img src ="../images/blank.gif" height="1px" width="140px">
-  <img src ="../images/garden_group.jpg" height="196" width="140px">
+  <img src ="../images/allas.jpg" alt="allas" />
+  <img src ="../images/blank.gif" height="1px" width="140px" alt="blank"/>
+  <img src ="../images/garden_group.jpg" height="196" width="140px" alt="garden"/>
 </div>
 <div class="right">
   In many ways Villa Taika is well suited to accomodate courses and other group happenings.<br/><br/> <ul> <li> large group room</li> <li> large garden</li> <li> high quality sound + video</li> <li> blankets and cushions</li> <li> wood heated sauna + pool</li> <li> accomodate 20-30 people</li> <li> extra teacher room</li> <li> nearby activities</li> <li> vegetarian food</li> </ul>
@@ -109,10 +104,9 @@
 </div>
 
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -128,7 +122,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
