--- a/villataika.fi/en/photos.html
+++ b/villataika.fi/en/photos.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <link href="../stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" /> 
-  <link href="../stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" /> 
-  <script src="../javascripts/prototype.js" type="text/javascript"></script> 
-  <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
-  <script src="../javascripts/prototype.js" type="text/javascript"></script> 
-  <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
-  <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
+  <link href="../stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" />
+
+  <script src="../javascripts/prototype.js" type="text/javascript"></script>
+  <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script>
+  <script src="../javascripts/lightbox.js" type="text/javascript"></script>
+
+  <link href="../stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" />
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Photos" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Photos" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed & Breakfast Villa Taika : Photos</title>
+  <title>Bed &amp; Breakfast Villa Taika : Photos</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="../fi/photos.html" >  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="photos.html" class='selected'>  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -90,11 +86,10 @@
 
   <div id="rcol">
     <div id="rcontent">
-
       <div class="photobox_w">
   <div class="eiole">
     <a href="../photos/large/w_frogs.jpg" rel="lightbox[photos]" title="Dancing frogs">
-      <img src="../photos/w_frogs.jpg"  >
+      <img src="../photos/w_frogs.jpg" alt="Dancing frogs"/>
     </a><br/>
     Dancing frogs
   </div>
@@ -102,7 +97,7 @@
 <div class="photobox_w">
   <div class="eiole">
     <a href="../photos/large/w_terasse.jpg" rel="lightbox[photos]" title="Garden terasse">
-      <img src="../photos/w_terasse.jpg"  >
+      <img src="../photos/w_terasse.jpg" alt="Garden terasse"/>
     </a><br/>
     Garden terasse
   </div>
@@ -110,7 +105,7 @@
 <div class="photobox_w">
   <div class="eiole">
     <a href="../photos/large/w_peony.jpg" rel="lightbox[photos]" title="Fountain in the garden">
-      <img src="../photos/w_peony.jpg"  >
+      <img src="../photos/w_peony.jpg" alt="Fountain in the garden"/>
     </a><br/>
     Fountain in the garden
   </div>
@@ -118,7 +113,7 @@
 <div class="photobox_h">
   <div class="eiole">
     <a href="../photos/large/h_aurinko_wc.jpg" rel="lightbox[photos]" title="Aurinko wc">
-      <img src="../photos/h_aurinko_wc.jpg"  >
+      <img src="../photos/h_aurinko_wc.jpg" alt="Aurinko wc"/>
     </a><br/>
     Aurinko wc
   </div>
@@ -126,7 +121,7 @@
 <div class="photobox_h">
   <div class="eiole">
     <a href="../photos/large/h_curves.jpg" rel="lightbox[photos]" title="Aurinko carvings">
-      <img src="../photos/h_curves.jpg"  >
+      <img src="../photos/h_curves.jpg" alt="Aurinko carvings"/>
     </a><br/>
     Aurinko carvings
   </div>
@@ -134,7 +129,7 @@
 <div class="photobox_h">
   <div class="eiole">
     <a href="../photos/large/h_lootus_wc.jpg" rel="lightbox[photos]" title="Lotus suite toilet">
-      <img src="../photos/h_lootus_wc.jpg"  >
+      <img src="../photos/h_lootus_wc.jpg" alt="Lotus suite toilet"/>
     </a><br/>
     Lotus suite toilet
   </div>
@@ -142,17 +137,16 @@
 <div class="photobox_h">
   <div class="eiole">
     <a href="../photos/large/h_highview.jpg" rel="lightbox[photos]" title="Villa Taika from above">
-      <img src="../photos/h_highview.jpg"  >
+      <img src="../photos/h_highview.jpg" alt="Villa Taika from above"/>
     </a><br/>
     Villa Taika from above
   </div>
 </div>
 
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -168,7 +162,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
