--- a/villataika.fi/fi/bed.html
+++ b/villataika.fi/fi/bed.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <link href="../stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" /> 
-  <link href="../stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" /> 
-  <script src="../javascripts/prototype.js" type="text/javascript"></script> 
-  <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
-  <script src="../javascripts/prototype.js" type="text/javascript"></script> 
-  <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
-  <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
+  <link href="../stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" />
+
+  <script src="../javascripts/prototype.js" type="text/javascript"></script>
+  <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script>
+  <script src="../javascripts/lightbox.js" type="text/javascript"></script>
+
+  <link href="../stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" />
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Bed &amp; Breakfast" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : taianomaista tyylikkyyttä Bed &amp; Breakfast" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed & Breakfast Villa Taika : Bed &amp; Breakfast</title>
+  <title>Bed &amp; Breakfast Villa Taika : Bed &amp; Breakfast</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="bed.html" class='selected'>  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="../en/bed.html" >  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>Uutiset</span> </a>
@@ -90,7 +86,6 @@
 
   <div id="rcol">
     <div id="rcontent">
-
       <div class="wide_bedbox">
   <div class="bedbox">
       Tervetuloa viehättävään Villa Taikaan! <br/>Olemme luoneet B&amp;;n, jossa jokainen huone on uniikisti sisustettu. <br/> Matkoillamme Aasiaan olemme usein lumoutuneet sen kauneudesta. Valitsimme huoneisiimme yksilölliset huonekalut muistuttamaan ja inspiroimaan elämän ainutlaatuisesta kauneudesta. <br/> Toivomme että sinäkin nautit siitä täällä luonamme Villa Taiassa! <br/>Meillä on suuri puutarha vesiputouksineen ja pihalampineen . Siellä voit nauttia olostasi vesiputouksen solinaa kuunnellen. <br/> <br/> Tulopäivänä huoneeseen voi saapua klo 14-19. Ilmoitathan saapumisajan etukäteen!! Huone luovutetaan klo 12 mennessä.<br/>Voit myös tehdä retkiä lähiympäristöön. Billnäsin ruukki 15km, Mustion linna 15km, Tammisaari 35km.
@@ -104,8 +99,8 @@
     <a href="suites.html">
       Sviitit (suihkulla) 
       <img src="../images/sun_small.jpg"  
-          alt=shortSviitit (suihkulla)  
-          height=187px  width=250px />
+          alt=Sviitit (suihkulla)  
+          height="187px"  width="250px" />
 </a>    <br/>
     3 sviittiä omalla suihkulla 85/90/95
   </div>
@@ -113,8 +108,8 @@
     <a href="deluxe.html">
     Deluxe (wc:llä) 
       <img src="/images/orange_small.jpg"  
-          alt=shortDeluxe (wc:llä)  
-          height=187px  width=250px />
+          alt=Deluxe (wc:llä)  
+          height="187px"  width="250px" />
 </a>    <br/>
     2 huonetta omalla wc:llä (yläkerrassa) 75€/2hh ja 60€/1hh
   </div>
@@ -122,8 +117,8 @@
     <a href="standard.html">
     Standard (jaettu) 
       <img src="../images/rose_small.jpg"  
-          alt="shortStandard (jaettu)"  
-          height=187px  width=250px />
+          alt="Standard (jaettu)"  
+          height="187px"  width="250px" />
 </a>    <br/>
     2 huonetta, jotka jakavat yhteisen suihkun, 75€/2hh ja 60€/1hh
   </div>
@@ -137,10 +132,9 @@
 </div>
 <div class="divider"></div>
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -156,7 +150,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
