--- a/villataika.fi/fi/index.html
+++ b/villataika.fi/fi/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <link href="../stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" /> 
-  <link href="../stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" /> 
-  <script src="../javascripts/prototype.js" type="text/javascript"></script> 
-  <script src="../javascripts/effects.js" type="text/javascript"></script> 
-  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
-  <script src="../javascripts/controls.js" type="text/javascript"></script> 
-  <script src="../javascripts/rails.js" type="text/javascript"></script> 
-  <script src="../javascripts/application.js" type="text/javascript"></script> 
-  <script src="../javascripts/prototype.js" type="text/javascript"></script> 
-  <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
-  <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
+  <link href="../stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" />
+
+  <script src="../javascripts/prototype.js" type="text/javascript"></script>
+  <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script>
+  <script src="../javascripts/lightbox.js" type="text/javascript"></script>
+
+  <link href="../stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" />
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Kotisivu" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : taianomaista tyylikkyyttä Kotisivu" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed & Breakfast Villa Taika : Kotisivu</title>
+  <title>Bed &amp; Breakfast Villa Taika : Kotisivu</title>
   
 </head>
 
@@ -29,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="../images/logo_iso.png">
+        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -71,9 +67,9 @@
       <div class="divider"></div>
     
         <a href="index.html" class='selected'>  
-          <img src="../images/fi.gif"/> </a>
+          <img src="../images/fi.gif" alt="fi"/> </a>
         <a href="../en/index.html" >  
-          <img src="../images/en.gif"/> </a>
+          <img src="../images/en.gif" alt="en"/> </a>
 
       <h3>
         <a href="news.html">  <span>Uutiset</span> </a>
@@ -90,7 +86,6 @@
 
   <div id="rcol">
     <div id="rcontent">
-
       <div id="lotus">
   <a href='suites.html'>
    <img alt='Aurinko sviitti' border='0' height='414' src='../images/aurinko.jpg' valign='top' width='312' />
@@ -126,10 +121,9 @@
 
 
 
-
+    </div>
+    <div class="divider"></div>
   </div>
-  <div class="divider"></div>
-
 </div>
 
 <div id="footer">
@@ -145,7 +139,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
+    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
