fixed menu, adds booking

--- a/villataika.fi/fi/map.html
+++ b/villataika.fi/fi/map.html
@@ -34,22 +34,25 @@
     <div id="menu">
       <ul>
           <li >
-            <a href="index.html">Kotisivu</a><span>&nbsp;</span>
+            <a href="index.html">Kotisivu</a>
           </li>
           <li >
-            <a href="bed.html">Bed &amp; Breakfast</a><span>&nbsp;</span>
+            <a href="bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="groups.html">Ryhmille</a><span>&nbsp;</span>
+            <a href="booking.html">Varaus</a>
+          </li>
+          <li >
+            <a href="groups.html">Ryhmille</a>
           </li>
           <li class="active">
-            <a href="map.html">Kartta</a><span>&nbsp;</span>
+            <a href="map.html">Kartta</a>
           </li>
           <li >
-            <a href="photos.html">Kuvat</a><span>&nbsp;</span>
+            <a href="photos.html">Kuvat</a>
           </li>
           <li >
-            <a href="activities.html">Tekemistä</a><span>&nbsp;</span>
+            <a href="activities.html">Tekemistä</a>
           </li>
       </ul>
     </div>
@@ -79,7 +82,6 @@
           Edullinen majoitus kauniissa ulko aitassamme. 
         </a>
       </div>
-      <div class="divider"></div>
     </div>
 
   </div>
