--- a/villataika.fi/index.html
+++ b/villataika.fi/index.html
@@ -34,22 +34,25 @@
     <div id="menu">
       <ul>
           <li >
-            <a href="fi/index.html">Kotisivu</a><span>&nbsp;</span>
+            <a href="fi/index.html">Kotisivu</a>
           </li>
           <li >
-            <a href="fi/bed.html">Bed &amp; Breakfast</a><span>&nbsp;</span>
+            <a href="fi/bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="fi/groups.html">Ryhmille</a><span>&nbsp;</span>
+            <a href="fi/booking.html">Varaus</a>
           </li>
           <li >
-            <a href="fi/map.html">Kartta</a><span>&nbsp;</span>
+            <a href="fi/groups.html">Ryhmille</a>
           </li>
           <li >
-            <a href="fi/photos.html">Kuvat</a><span>&nbsp;</span>
+            <a href="fi/map.html">Kartta</a>
           </li>
           <li >
-            <a href="fi/activities.html">Tekemistä</a><span>&nbsp;</span>
+            <a href="fi/photos.html">Kuvat</a>
+          </li>
+          <li >
+            <a href="fi/activities.html">Tekemistä</a>
           </li>
       </ul>
     </div>
@@ -79,7 +82,6 @@
           Edullinen majoitus kauniissa ulko aitassamme. 
         </a>
       </div>
-      <div class="divider"></div>
     </div>
 
   </div>
