--- a/villataika.fi/en/bed.html
+++ b/villataika.fi/en/bed.html
@@ -34,22 +34,25 @@
     <div id="menu">
       <ul>
           <li >
-            <a href="index.html">Home</a><span>&nbsp;</span>
+            <a href="index.html">Home</a>
           </li>
           <li class="active">
-            <a href="bed.html">Bed &amp; Breakfast</a><span>&nbsp;</span>
+            <a href="bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="groups.html">Groups</a><span>&nbsp;</span>
+            <a href="booking.html">Reservation</a>
           </li>
           <li >
-            <a href="map.html">Map</a><span>&nbsp;</span>
+            <a href="groups.html">Groups</a>
           </li>
           <li >
-            <a href="photos.html">Photos</a><span>&nbsp;</span>
+            <a href="map.html">Map</a>
           </li>
           <li >
-            <a href="activities.html">Activities</a><span>&nbsp;</span>
+            <a href="photos.html">Photos</a>
+          </li>
+          <li >
+            <a href="activities.html">Activities</a>
           </li>
       </ul>
     </div>
@@ -79,7 +82,6 @@
           Affordable accommodation in redocorated granery 
         </a>
       </div>
-      <div class="divider"></div>
     </div>
 
   </div>
