fixes menu php ending

--- a/villataika.fi/en/groups.html
+++ b/villataika.fi/en/groups.html
@@ -40,7 +40,7 @@
             <a href="bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="booking.html">Reservation</a>
+            <a href="booking.php">Reservation</a>
           </li>
           <li class="active">
             <a href="groups.html">Groups</a>
