--- a/villataika.fi/fi/activities.html
+++ b/villataika.fi/fi/activities.html
@@ -40,7 +40,7 @@
             <a href="bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="booking.html">Varaus</a>
+            <a href="booking.php">Varaus</a>
           </li>
           <li >
             <a href="groups.html">Ryhmille</a>
