--- a/villataika.fi/index.html
+++ b/villataika.fi/index.html
@@ -40,7 +40,7 @@
             <a href="fi/bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="fi/booking.html">Varaus</a>
+            <a href="fi/booking.php">Varaus</a>
           </li>
           <li >
             <a href="fi/groups.html">Ryhmille</a>
