--- a/villataika.fi/en/photos.html
+++ b/villataika.fi/en/photos.html
@@ -90,6 +90,30 @@
     <div id="rcontent">
       <div class="photobox_w">
   <div class="eiole">
+    <a href="../photos/large/w_pavillion.jpg" rel="lightbox[photos]" title="Pavillion">
+      <img src="../photos/w_pavillion.jpg" alt="Pavillion"/>
+    </a><br/>
+    Pavillion
+  </div>
+</div>
+<div class="photobox_w">
+  <div class="eiole">
+    <a href="../photos/large/w_kukkat.jpg" rel="lightbox[photos]" title="Flowers in Garden">
+      <img src="../photos/w_kukkat.jpg" alt="Flowers in Garden"/>
+    </a><br/>
+    Flowers in Garden
+  </div>
+</div>
+<div class="photobox_w">
+  <div class="eiole">
+    <a href="../photos/large/w_piha.jpg" rel="lightbox[photos]" title="Garden in Summer">
+      <img src="../photos/w_piha.jpg" alt="Garden in Summer"/>
+    </a><br/>
+    Garden in Summer
+  </div>
+</div>
+<div class="photobox_w">
+  <div class="eiole">
     <a href="../photos/large/w_frogs.jpg" rel="lightbox[photos]" title="Dancing frogs">
       <img src="../photos/w_frogs.jpg" alt="Dancing frogs"/>
     </a><br/>
