--- a/villataika.fi/fi/photos.html
+++ b/villataika.fi/fi/photos.html
@@ -90,6 +90,30 @@
     <div id="rcontent">
       <div class="photobox_w">
   <div class="eiole">
+    <a href="../photos/large/w_pavillion.jpg" rel="lightbox[photos]" title="Taika paviljonki">
+      <img src="../photos/w_pavillion.jpg" alt="Taika paviljonki"/>
+    </a><br/>
+    Taika paviljonki
+  </div>
+</div>
+<div class="photobox_w">
+  <div class="eiole">
+    <a href="../photos/large/w_kukkat.jpg" rel="lightbox[photos]" title="Punaiset liljat">
+      <img src="../photos/w_kukkat.jpg" alt="Punaiset liljat"/>
+    </a><br/>
+    Punaiset liljat
+  </div>
+</div>
+<div class="photobox_w">
+  <div class="eiole">
+    <a href="../photos/large/w_piha.jpg" rel="lightbox[photos]" title="Puutarhamme">
+      <img src="../photos/w_piha.jpg" alt="Puutarhamme"/>
+    </a><br/>
+    Puutarhamme
+  </div>
+</div>
+<div class="photobox_w">
+  <div class="eiole">
     <a href="../photos/large/w_frogs.jpg" rel="lightbox[photos]" title="Tanssivat  sammakot">
       <img src="../photos/w_frogs.jpg" alt="Tanssivat  sammakot"/>
     </a><br/>
